updated print class to use variable states

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,6 +14,7 @@
   <!-- include source files here... -->
   <script src="src/Account.js"></script>
   <script src="src/Transaction.js"></script>
+  <script src="src/Print.js"></script>
 
   <!-- include spec files here... -->
 
@@ -21,6 +22,7 @@
   <script src="spec/FeatureSpec.js"></script>
   <script src="spec/AccountSpec.js"></script>
   <script src="spec/TransactionSpec.js"></script>
+  <script src="spec/PrintSpec.js"></script>
 
 </head>
 
